# 6.839-final

./: .gitignore  .gitmodules  CMakeLists.txt  OpenFab.sln  README.MD  test.scad  tree.scad
Actuation/: Actuation.vcxproj  CMakeLists.txt
AutodiffEngine/: AutodiffEngine.vcxproj  CMakeLists.txt
AutodiffEngine/include/: autodiff_engine.hpp  eigen_num_traits.hpp  hash_utils.hpp
CSG/: assn6.scad  assn6_CSG.py  lsystem.scad
CSG/assn6_meshes/: bridge_r_30_o_-20.stl  bridge_r_30_o_-21.stl  bridge_r_30_o_-22.stl  bridge_r_30_o_-23.stl  bridge_r_30_o_-24.stl  bridge_r_30_o_-25.stl  bridge_r_30_o_-26.stl  bridge_r_30_o_-27.stl  bridge_r_30_o_-28.stl  bridge_r_30_o_-29.stl  bridge_r_30_o_-30.stl  bridge_r_31_o_-20.stl  bridge_r_31_o_-21.stl  bridge_r_31_o_-22.stl  bridge_r_31_o_-23.stl  bridge_r_31_o_-24.stl  bridge_r_31_o_-25.stl  bridge_r_31_o_-26.stl  bridge_r_31_o_-27.stl  bridge_r_31_o_-28.stl  bridge_r_31_o_-29.stl  bridge_r_31_o_-30.stl  bridge_r_32_o_-20.stl  bridge_r_32_o_-21.stl  bridge_r_32_o_-22.stl  bridge_r_32_o_-23.stl  bridge_r_32_o_-24.stl  bridge_r_32_o_-25.stl  bridge_r_32_o_-26.stl  bridge_r_32_o_-27.stl  bridge_r_32_o_-28.stl  bridge_r_32_o_-29.stl  bridge_r_32_o_-30.stl  bridge_r_33_o_-20.stl  bridge_r_33_o_-21.stl  bridge_r_33_o_-22.stl  bridge_r_33_o_-23.stl  bridge_r_33_o_-24.stl  bridge_r_33_o_-25.stl  bridge_r_33_o_-26.stl  (+81 more)
Control/: CMakeLists.txt  Control.vcxproj
DataStructure/: CMakeLists.txt
DataStructure/include/: IntervalTree.hpp
Deformable/: CMakeLists.txt  Deformable.vcxproj
Deformable/include/: arap.hpp
DesignOptimization/: CMakeLists.txt  DesignOptimization.vcxproj
Document/: ClassDefinition.md
ExternalLibs/CppAD/: .gitignore
ExternalLibs/CppAD/cppad/: configure.hpp
ExternalLibs/CppADCodeGen/: CMakeLists.txt
ExternalLibs/cinolib/include/cinolib/: drawable_object.h  vector_field.h
ExternalLibs/cinolib/include/cinolib/io/: read_write.h
ExternalLibs/libigl/tutorial/206_GeodesicDistance/: main.cpp
ExternalLibs/libigl/tutorial/504_NRosyDesign/: main.cpp
ExternalLibs/libigl/tutorial/505_MIQ/: main.cpp
ExternalLibs/libigl/tutorial/506_FrameField/: main.cpp
ExternalLibs/libigl/tutorial/708_Picking/: main.cpp
FabTranslation/: CMakeLists.txt  FabTranslation.vcxproj
FabTranslation/include/: FabSlicer.hpp  GCodeConverter.hpp
Geometry/: CMakeLists.txt  Geometry.vcxproj
Geometry/include/: BasicGeometry.hpp  GeometryExploration.hpp
HardwareInterface/: CMakeLists.txt  HardwareInterface.vcxproj
Kinematics/: CMakeLists.txt  Kinematics.vcxproj
MachineLearning/: CMakeLists.txt  MachineLearning.pyproj
Materials/: CMakeLists.txt  Materials.vcxproj
Materials/include/: hex_deformable_body.hpp  linear_material.hpp
Mesh/: CMakeLists.txt  Mesh.vcxproj
Mesh/include/: hex_mesh.hpp  mesh.hpp  mesh_importer.hpp  read_stl.hpp  tet_mesh.hpp  tri_mesh.hpp  voxelizer.hpp
MotionPlanning/: CMakeLists.txt  MotionPlanning.vcxproj
MotionPrimitives/: CMakeLists.txt  MotionPrimitives.vcxproj
MultiphysicsCoupling/: CMakeLists.txt  MultiphysicsCoupling.vcxproj
NetworkCommunication/: CMakeLists.txt  NetworkCommunication.vcxproj
NetworkCommunication/include/: generate_commands.hpp  server.hpp
OpenFab/: CMakeLists.txt  OpenFab.vcxproj
OpenFab/include/: args.hxx
OpenFab/include/igl/viewer/: OpenGL_shader.h
OpenFab/src/: main.cpp  main3.cpp  main4.cpp  main6.cpp
Optimization/: CMakeLists.txt  Optimization.vcxproj
RigidBodyMechanics/: CMakeLists.txt  RigidBodyMechanics.vcxproj
Sampling/: CMakeLists.txt  Sampling.vcxproj
Simulation/: CMakeLists.txt  Simulation.vcxproj
Test/: CMakeLists.txt
Test/src/: test_autodiff_engine.cpp
Visualization/: CMakeLists.txt
Visualization/FossFabVisualizer/FossFabVisualizer/: Assembly-CSharp.csproj  FossFabVisualizer.csproj  FossFabVisualizer.sln  packages.config
Visualization/FossFabVisualizer/FossFabVisualizer/Assets/: ArcBall.cs  CheckerboardTexture.cs  Fossfab.cs  MockStreamingData.cs  MouseOrbitImproved.cs  MoveCamera.cs  StandardSurfaceShader.shader  Visualizer.cs  Visualizer.unity  fossfab.pb.cc  fossfab.pb.h  fossfab.proto
Visualization/FossFabVisualizer/FossFabVisualizer/Assets/Meshes/: printhead.stl
Visualization/FossFabVisualizer/FossFabVisualizer/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset
Visualization/FossFabVisualizer/FossFabVisualizer/Temp/StagingArea/Visualizer_Data/: globalgamemanagers.assets  level0
Visualization/FossFabVisualizer/FossFabVisualizer/Temp/__Backupscenes/: 0.backup
Visualization/FossFabVisualizer/Visualizer_Data/: globalgamemanagers  sharedassets0.assets
Visualization/FossFabVisualizer/Visualizer_Data/Resources/: unity_builtin_extra
Visualization/cmake/: UseCSharp.cmake  UseMono.cmake
cmake_utils/: CMakeLists.txt  FindLIBIGL.cmake  cmake_utils.txt
data/assignment1/: fandisk_voxel_info.txt
data/assignment2/: run_assignment2.py
data/assignment4/: test.txt
data/assignment6/: ec_result.txt  q1_result.txt  q2_result.txt  q3_result.txt  q4_pareto_front_result.txt  q4_result.txt
dataBackup/: cube-contour.ply
dataBackup/assignment2/: .run_assignment2.py.swp  run_assignment2.py  spot_voxel_info.txt
development_guide/: ModuleGuide.txt  StyleGuide.txt
